<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:orientation="vertical"
    tools:context="com.rxjy.niuxiaoer.activity.WithdrawDepositActivity">

    <include layout="@layout/include_header_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20px"
        android:text="@string/please_bind_yourself_bank_card"
        android:textColor="@color/colorBlackLight"
        android:textSize="@dimen/text_size_s" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="24px">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <TextView
                android:id="@+id/tv_to_bank_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/to_bank_card"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_to_bank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/tv_to_bank_text"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <TextView
                android:id="@+id/tv_withdraw_deposit_price_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/withdraw_deposit_price"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_withdraw_deposit_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/tv_withdraw_deposit_price_text"
                android:background="@null"
                android:hint="@string/please_input_withdraw_deposit_price"
                android:inputType="numberDecimal"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_withdraw_deposit_price_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <TextView
                android:id="@+id/tv_withdraw_deposit_pwd_text"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/withdraw_deposit_pwd"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_withdraw_deposit_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/tv_withdraw_deposit_pwd_text"
                android:background="@null"
                android:hint="@string/please_input_withdraw_deposit_pwd"
                android:inputType="numberPassword"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_withdraw_deposit_pwd_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:orientation="vertical"
        android:padding="24px">

        <Button
            android:id="@+id/btn_withdraw_deposit"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@drawable/selector_btn_sub"
            android:text="@string/withdraw_deposit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_l" />

    </LinearLayout>


</LinearLayout>
