<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:orientation="vertical"
    tools:context="com.rxjy.niuxiaoer.activity.AllianceActivity">

    <include layout="@layout/include_header_btn_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="144px"
        android:background="@color/colorWhite"
        android:padding="24px"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_input_alliance"
            android:layout_width="130px"
            android:layout_height="46px"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_btn_sub"
            android:text="@string/input_alliance"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_m"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_develop_alliance"
            android:layout_width="130px"
            android:layout_height="46px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_btn_sub"
            android:text="@string/develop_alliance"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_m" />

        <LinearLayout
            android:layout_width="344px"
            android:layout_height="70px"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="盟友总人数(人)"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_m" />

            <TextView
                android:id="@+id/tv_alliance_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:text="76"
                android:textColor="@color/colorPrimary"
                android:textSize="40px" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLine" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="20px"
        android:background="@color/colorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68px"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/ally"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/text_size_l" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="10px"
            android:layout_marginTop="10px"
            android:background="@color/colorLine" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/measure_room"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/text_size_l" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="10px"
            android:layout_marginTop="10px"
            android:background="@color/colorLine" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/brokerage"
            android:textColor="@color/colorGrayDark"
            android:textSize="@dimen/text_size_l" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLine" />

    <ListView
        android:id="@+id/lv_alliance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"></ListView>

</LinearLayout>
